GTK4/Package_Tools/include-C/gtk/deprecated/in_arbeit/fertig/gtkcellarea.h

#define GTK_TYPE_CELL_AREA                (gtk_cell_area_get_type ())
#define GTK_CELL_AREA(obj)                (G_TYPE_CHECK_INSTANCE_CAST ((obj), GTK_TYPE_CELL_AREA, GtkCellArea))
#define GTK_CELL_AREA_CLASS(klass)        (G_TYPE_CHECK_CLASS_CAST ((klass), GTK_TYPE_CELL_AREA, GtkCellAreaClass))
#define GTK_IS_CELL_AREA(obj)     (G_TYPE_CHECK_INSTANCE_TYPE ((obj), GTK_TYPE_CELL_AREA))
#define GTK_IS_CELL_AREA_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), GTK_TYPE_CELL_AREA))
#define GTK_CELL_AREA_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS ((obj), GTK_TYPE_CELL_AREA, GtkCellAreaClass))
typedef struct _GtkCellArea              GtkCellArea;
typedef struct _GtkCellAreaClass         GtkCellAreaClass;
/**
 * GTK_CELL_AREA_WARN_INVALID_CELL_PROPERTY_ID:
 * @object: the `GObject` on which set_cell_property() or get_cell_property()
 *   was called
 * @property_id: the numeric id of the property
 * @pspec: the `GParamSpec` of the property
 *
 * This macro should be used to emit a standard warning about unexpected
 * properties in set_cell_property() and get_cell_property() implementations.
 */
#define GTK_CELL_AREA_WARN_INVALID_CELL_PROPERTY_ID(object, property_id, pspec) \
  G_OBJECT_WARN_INVALID_PSPEC ((object), "cell property id", (property_id), (pspec))
struct _GtkCellArea
{
  /*< private >*/
  GInitiallyUnowned parent_instance;
};
/**
 * GtkCellAreaClass:
 * @add: adds a `GtkCellRenderer` to the area.
 * @remove: removes a `GtkCellRenderer` from the area.
 * @foreach: calls the `GtkCellCallback` function on every `GtkCellRenderer` in
 *   the area with the provided user data until the callback returns %TRUE.
 * @foreach_alloc: Calls the `GtkCellAllocCallback` function on every
 *   `GtkCellRenderer` in the area with the allocated area for the cell
 *   and the provided user data until the callback returns %TRUE.
 * @event: Handle an event in the area, this is generally used to activate
 *   a cell at the event location for button events but can also be used
 *   to generically pass events to `GtkWidget`s drawn onto the area.
 * @snapshot: Actually snapshot the area’s cells to the specified rectangle,
 *   @background_area should be correctly distributed to the cells
 *   corresponding background areas.
 * @apply_attributes: Apply the cell attributes to the cells. This is
 *   implemented as a signal and generally `GtkCellArea` subclasses don't
 *   need to implement it since it is handled by the base class.
 * @create_context: Creates and returns a class specific `GtkCellAreaContext`
 *   to store cell alignment and allocation details for a said `GtkCellArea`
 *   class.
 * @copy_context: Creates a new `GtkCellAreaContext` in the same state as
 *   the passed @context with any cell alignment data and allocations intact.
 * @get_request_mode: This allows an area to tell its layouting widget whether
 *   it prefers to be allocated in %GTK_SIZE_REQUEST_HEIGHT_FOR_WIDTH or
 *   %GTK_SIZE_REQUEST_WIDTH_FOR_HEIGHT mode.
 * @get_preferred_width: Calculates the minimum and natural width of the
 *   areas cells with the current attributes applied while considering
 *   the particular layouting details of the said `GtkCellArea`. While
 *   requests are performed over a series of rows, alignments and overall
 *   minimum and natural sizes should be stored in the corresponding
 *   `GtkCellAreaContext`.
 * @get_preferred_height_for_width: Calculates the minimum and natural height
 *   for the area if the passed @context would be allocated the given width.
 *   When implementing this virtual method it is safe to assume that @context
 *   has already stored the aligned cell widths for every `GtkTreeModel` row
 *   that @context will be allocated for since this information was stored
 *   at `GtkCellAreaClass.get_preferred_width()` time. This virtual method
 *   should also store any necessary alignments of cell heights for the
 *   case that the context is allocated a height.
 * @get_preferred_height: Calculates the minimum and natural height of the
 *   areas cells with the current attributes applied. Essentially this is
 *   the same as `GtkCellAreaClass.get_preferred_width()` only for areas
 *   that are being requested as %GTK_SIZE_REQUEST_WIDTH_FOR_HEIGHT.
 * @get_preferred_width_for_height: Calculates the minimum and natural width
 *   for the area if the passed @context would be allocated the given
 *   height. The same as `GtkCellAreaClass.get_preferred_height_for_width()`
 *   only for handling requests in the %GTK_SIZE_REQUEST_WIDTH_FOR_HEIGHT
 *   mode.
 * @set_cell_property: This should be implemented to handle changes in child
 *   cell properties for a given `GtkCellRenderer` that were previously
 *   installed on the `GtkCellAreaClass` with gtk_cell_area_class_install_cell_property().
 * @get_cell_property: This should be implemented to report the values of
 *   child cell properties for a given child `GtkCellRenderer`.
 * @focus: This virtual method should be implemented to navigate focus from
 *   cell to cell inside the `GtkCellArea`. The `GtkCellArea` should move
 *   focus from cell to cell inside the area and return %FALSE if focus
 *   logically leaves the area with the following exceptions: When the
 *   area contains no activatable cells, the entire area receives focus.
 *   Focus should not be given to cells that are actually “focus siblings”
 *   of other sibling cells (see gtk_cell_area_get_focus_from_sibling()).
 *   Focus is set by calling gtk_cell_area_set_focus_cell().
 * @is_activatable: Returns whether the `GtkCellArea` can respond to
 *   `GtkCellAreaClass.activate()`, usually this does not need to be
 *   implemented since the base class takes care of this however it can
 *   be enhanced if the `GtkCellArea` subclass can handle activation in
 *   other ways than activating its `GtkCellRenderers`.
 * @activate: This is called when the layouting widget rendering the
 *   `GtkCellArea` activates the focus cell (see gtk_cell_area_get_focus_cell()).
 */
struct _GtkCellAreaClass
{
  /*< private >*/
  GInitiallyUnownedClass parent_class;

  /*< public >*/

  /* Basic methods */
  void               (* add)                             (GtkCellArea             *area,
                                                          GtkCellRenderer         *renderer);
  void               (* remove)                          (GtkCellArea             *area,
                                                          GtkCellRenderer         *renderer);
  void               (* foreach)                         (GtkCellArea             *area,
                                                          GtkCellCallback          callback,
                                                          gpointer                 callback_data);
  void               (* foreach_alloc)                   (GtkCellArea             *area,
                                                          GtkCellAreaContext      *context,
                                                          GtkWidget               *widget,
                                                          const GdkRectangle      *cell_area,
                                                          const GdkRectangle      *background_area,
                                                          GtkCellAllocCallback     callback,
                                                          gpointer                 callback_data);
  int                (* event)                           (GtkCellArea             *area,
                                                          GtkCellAreaContext      *context,
                                                          GtkWidget               *widget,
                                                          GdkEvent                *event,
                                                          const GdkRectangle      *cell_area,
                                                          GtkCellRendererState     flags);
  void               (* snapshot)                        (GtkCellArea             *area,
                                                          GtkCellAreaContext      *context,
                                                          GtkWidget               *widget,
                                                          GtkSnapshot             *snapshot,
                                                          const GdkRectangle      *background_area,
                                                          const GdkRectangle      *cell_area,
                                                          GtkCellRendererState     flags,
                                                          gboolean                 paint_focus);
  void               (* apply_attributes)                (GtkCellArea             *area,
                                                          GtkTreeModel            *tree_model,
                                                          GtkTreeIter             *iter,
                                                          gboolean                 is_expander,
                                                          gboolean                 is_expanded);

  /* Geometry */
  GtkCellAreaContext *(* create_context)                 (GtkCellArea             *area);
  GtkCellAreaContext *(* copy_context)                   (GtkCellArea             *area,
                                                          GtkCellAreaContext      *context);
  GtkSizeRequestMode (* get_request_mode)                (GtkCellArea             *area);
  void               (* get_preferred_width)             (GtkCellArea             *area,
                                                          GtkCellAreaContext      *context,
                                                          GtkWidget               *widget,
                                                          int                     *minimum_width,
                                                          int                     *natural_width);
  void               (* get_preferred_height_for_width)  (GtkCellArea             *area,
                                                          GtkCellAreaContext      *context,
                                                          GtkWidget               *widget,
                                                          int                      width,
                                                          int                     *minimum_height,
                                                          int                     *natural_height);
  void               (* get_preferred_height)            (GtkCellArea             *area,
                                                          GtkCellAreaContext      *context,
                                                          GtkWidget               *widget,
                                                          int                     *minimum_height,
                                                          int                     *natural_height);
  void               (* get_preferred_width_for_height)  (GtkCellArea             *area,
                                                          GtkCellAreaContext      *context,
                                                          GtkWidget               *widget,
                                                          int                      height,
                                                          int                     *minimum_width,
                                                          int                     *natural_width);

  /* Cell Properties */
  void               (* set_cell_property)               (GtkCellArea             *area,
                                                          GtkCellRenderer         *renderer,
                                                          guint                    property_id,
                                                          const GValue            *value,
                                                          GParamSpec              *pspec);
  void               (* get_cell_property)               (GtkCellArea             *area,
                                                          GtkCellRenderer         *renderer,
                                                          guint                    property_id,
                                                          GValue                  *value,
                                                          GParamSpec              *pspec);

  /* Focus */
  gboolean           (* focus)                           (GtkCellArea             *area,
                                                          GtkDirectionType         direction);
  gboolean           (* is_activatable)                  (GtkCellArea             *area);
  gboolean           (* activate)                        (GtkCellArea             *area,
                                                          GtkCellAreaContext      *context,
                                                          GtkWidget               *widget,
                                                          const GdkRectangle      *cell_area,
                                                          GtkCellRendererState     flags,
                                                          gboolean                 edit_only);

  /*< private >*/

  gpointer padding[8];
};
GType                 gtk_cell_area_get_type                       (void) ;
void                  gtk_cell_area_stop_editing                   (GtkCellArea          *area,
                                                                    gboolean              canceled);
/* Functions for area implementations */

/* Distinguish the inner cell area from the whole requested area including margins */

void                  gtk_cell_area_inner_cell_area                (GtkCellArea        *area,
                                                                    GtkWidget          *widget,
                                                                    const GdkRectangle *cell_area,
                                                                    GdkRectangle       *inner_area);
/* Request the size of a cell while respecting the cell margins (requests are margin inclusive) */

void                  gtk_cell_area_request_renderer               (GtkCellArea        *area,
                                                                    GtkCellRenderer    *renderer,
                                                                    GtkOrientation      orientation,
                                                                    GtkWidget          *widget,
                                                                    int                 for_size,
                                                                    int                *minimum_size,
                                                                    int                *natural_size);
/* For api stability, this is called from gtkcelllayout.c in order to ensure the correct
 * object is passed to the user function in gtk_cell_layout_set_cell_data_func.
 *
 * This private api takes gpointer & GFunc arguments to circumvent circular header file
 * dependencies.
 */
void                 _gtk_cell_area_set_cell_data_func_with_proxy  (GtkCellArea           *area,
								    GtkCellRenderer       *cell,
								    GFunc                  func,
								    gpointer               func_data,
								    GDestroyNotify         destroy,
								    gpointer               proxy);