GTK4-Konverter_Alpha/header/gtk/gtkcellarea.pp


procedure gtk_cell_area_stop_editing(area:PGtkCellArea; canceled:Tgboolean);cdecl;external;



procedure gtk_cell_area_inner_cell_area(area:PGtkCellArea; widget:PGtkWidget; cell_area:PGdkRectangle; inner_area:PGdkRectangle);cdecl;external;


procedure gtk_cell_area_request_renderer(area:PGtkCellArea; renderer:PGtkCellRenderer; orientation:TGtkOrientation; widget:PGtkWidget; for_size:longint; 
            minimum_size:Plongint; natural_size:Plongint);cdecl;external;

procedure _gtk_cell_area_set_cell_data_func_with_proxy(area:PGtkCellArea; cell:PGtkCellRenderer; func:TGFunc; func_data:Tgpointer; destroy:TGDestroyNotify; 
            proxy:Tgpointer);cdecl;external;

{$endif}


implementation

function GTK_TYPE_CELL_AREA : longint; { return type might be wrong }
  begin
    GTK_TYPE_CELL_AREA:=gtk_cell_area_get_type;
  end;

function GTK_CELL_AREA(obj : longint) : longint;
begin
  GTK_CELL_AREA:=G_TYPE_CHECK_INSTANCE_CAST(obj,GTK_TYPE_CELL_AREA,GtkCellArea);
end;

function GTK_CELL_AREA_CLASS(klass : longint) : longint;
begin
  GTK_CELL_AREA_CLASS:=G_TYPE_CHECK_CLASS_CAST(klass,GTK_TYPE_CELL_AREA,GtkCellAreaClass);
end;

function GTK_IS_CELL_AREA(obj : longint) : longint;
begin
  GTK_IS_CELL_AREA:=G_TYPE_CHECK_INSTANCE_TYPE(obj,GTK_TYPE_CELL_AREA);
end;

function GTK_IS_CELL_AREA_CLASS(klass : longint) : longint;
begin
  GTK_IS_CELL_AREA_CLASS:=G_TYPE_CHECK_CLASS_TYPE(klass,GTK_TYPE_CELL_AREA);
end;

function GTK_CELL_AREA_GET_CLASS(obj : longint) : longint;
begin
  GTK_CELL_AREA_GET_CLASS:=G_TYPE_INSTANCE_GET_CLASS(obj,GTK_TYPE_CELL_AREA,GtkCellAreaClass);
end;

function GTK_CELL_AREA_WARN_INVALID_CELL_PROPERTY_ID(object,property_id,pspec : longint) : longint;
begin
  GTK_CELL_AREA_WARN_INVALID_CELL_PROPERTY_ID:=G_OBJECT_WARN_INVALID_PSPEC(object,'cell property id',property_id,pspec);
end;


end.
